--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
   <!--register the service worker-->
-  <script>
+  <!-- <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker
         .register('/sw.js')
@@ -27,7 +27,7 @@
           console.log("Service Worker Registered");
         });
     }
-  </script>
+  </script> -->
 </head>
 
 <body>
